<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:src="@drawable/testdis">

    </ImageView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:background="@drawable/btn_bg_white"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:text="@string/alltest"
                android:gravity="center">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:background="@drawable/btn_bg_white"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:text="@string/grandtest"
                android:layout_marginLeft="5dp"
                android:gravity="center">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:background="@drawable/btn_bg_white"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:text="@string/recalltest"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:background="@drawable/btn_bg_white"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:text="@string/prevtest"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal">

            </TextView>
            <TextView
                android:layout_width="100dp"
                android:background="@drawable/btn_bg_white"
                android:layout_height="35dp"
                android:textAlignment="center"
                android:text="@string/swt"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal">

            </TextView>


        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:layout_marginVertical="10dp"
        android:gravity="left|center"
        android:background="@drawable/test_discuss_bg"
        android:textColor="#b1b1b1"
        android:textSize="18sp"
        android:layout_marginHorizontal="6dp"
        android:paddingHorizontal="20dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:text="@string/allexamss">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/eml_alltest_rec">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>