<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:outlineAmbientShadowColor="@color/black"
        android:background="@drawable/card_back"
        card_view:cardUseCompatPadding="true"
        app:cardElevation="20dp"
        app:cardCornerRadius="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="280dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upsc"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:layout_gravity="center">
            </TextView>
            <View
                android:layout_width="160dp"
                android:layout_height="0.8dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/lightblack">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" :  200 MCQS"
                    android:textAllCaps="true"
                    android:textColor="@color/barcolor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="35dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" :  180 Mins"
                    android:textAllCaps="false"
                    android:textColor="@color/barcolor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>
            </LinearLayout>
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg_white"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center">
            </TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/card_back"
        card_view:cardUseCompatPadding="true"
        app:cardElevation="12dp"
        android:layout_gravity="center"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="center|right"
            android:layout_marginLeft="25dp"

            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:background="@color/white"
                android:src="@drawable/ic_bookmark">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text=" 10 Bookmarks"
                android:textAlignment="center"
                android:textColor="@color/lightblack"
                android:textSize="18sp"
                card_view:ignore="RtlCompat">

            </TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:weightSum="3"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:weightSum="1"
            android:paddingRight="10dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
               android:text="@string/firstAttempt" >
            </TextView>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/anatomy"
                android:layout_gravity="center"
                android:textAlignment="center">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/accuracyone" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/review" >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:weightSum="1"
            android:paddingRight="10dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/secondattempt" >
            </TextView>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/anatomy"
                android:layout_gravity="center"
                android:textAlignment="center">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/accuracytwo"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/review" >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:weightSum="1"
            android:layout_margin="5dp"

            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/thirdattempt" >
            </TextView>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/anatomy"
                android:layout_gravity="center"
                android:textAlignment="center">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/accuracythird" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/pink"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_height="wrap_content"
                android:text="@string/review" >
            </TextView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>