<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_back">

    </ImageView>
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:outlineAmbientShadowColor="@color/black"
        android:background="@drawable/card_back"
        card_view:cardUseCompatPadding="true"
        app:cardElevation="20dp"
        app:cardCornerRadius="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="260dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upsc"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:layout_gravity="center">
            </TextView>
            <View
                android:layout_width="160dp"
                android:layout_height="0.8dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/lightblack"></View>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_gravity="center">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" :  200 MCQS"
        android:textAllCaps="true"
        android:textColor="@color/barcolor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_gravity="center">
    </TextView>


    
     </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="35dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" :  180 Mins"
                    android:textAllCaps="false"
                    android:textColor="@color/barcolor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:layout_gravity="center">
                </TextView>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starttest"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg_white"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
              >

            </TextView>
        </LinearLayout>
        

    </androidx.cardview.widget.CardView>

</LinearLayout>