<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp"
        android:background="@drawable/card_back"
        android:foreground="?android:attr/selectableItemBackground"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:background="@color/white"
            android:orientation="vertical">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/are_you_want_to_pause_or_submit_the_test"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:textStyle="normal"
                card_view:ignore="RtlCompat"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/once_submitted_you_cannot_go_back_to_n_answer_anymore_questions"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/press_ok_to_continue"
                android:textColor="@color/lightblack"
                android:textSize="14sp"
                android:textStyle="normal"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/pause_bt_bg"
                    android:gravity="center"
                    android:text="Pause"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textStyle="normal">

                </TextView>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="6dp"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/submit_bt_bg"
                    android:text="Submit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal">

                </TextView>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>